version/0.15/_sources/api/ansys/dpf/core/operators/result/write_motion_dfmf_file/write_motion_dfmf_file.rst.txt






:class:`write_motion_dfmf_file`
===============================


.. py:class:: ansys.dpf.core.operators.result.write_motion_dfmf_file.write_motion_dfmf_file(model_data=None, mode_shapes=None, lumped_mass=None, field_coordinates=None, nod=None, used_node_index=None, eigenvalue=None, translational_mode_shape=None, rotational_mode_shape=None, invrt_1=None, invrt_2=None, invrt_3=None, invrt_4=None, invrt_5=None, invrt_6=None, invrt_7=None, invrt_8=None, dfmffile_path=None, rstfile_path=None, config=None, server=None)

   Bases: :py:obj:`ansys.dpf.core.dpf_operator.Operator`


   Write the invariant terms and the model data in a motion dfmf file


   Inputs
   ------
   model_data: PropertyField
       data describing the finite element model
   mode_shapes: FieldsContainer
       FieldsContainers containing the mode shapes, which are CST and NOR for the cms method
   lumped_mass: FieldsContainer
       FieldsContainers containing the lumped mass
   field_coordinates: Field
       coordinates of all nodes
   nod:
   used_node_index:
   eigenvalue:
   translational_mode_shape:
   rotational_mode_shape:
   invrt_1: float
   invrt_2:
   invrt_3:
   invrt_4:
   invrt_5:
   invrt_6:
   invrt_7:
   invrt_8:
   dfmffile_path: str
       path with motion dfmf extension where the export occurs
   rstfile_path: str

   Outputs
   -------
   dfmf_data_source: DataSources
       Data Source containing the dfmf file generated.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf

   >>> # Instantiate operator
   >>> op = dpf.operators.result.write_motion_dfmf_file()

   >>> # Make input connections
   >>> my_model_data = dpf.PropertyField()
   >>> op.inputs.model_data.connect(my_model_data)
   >>> my_mode_shapes = dpf.FieldsContainer()
   >>> op.inputs.mode_shapes.connect(my_mode_shapes)
   >>> my_lumped_mass = dpf.FieldsContainer()
   >>> op.inputs.lumped_mass.connect(my_lumped_mass)
   >>> my_field_coordinates = dpf.Field()
   >>> op.inputs.field_coordinates.connect(my_field_coordinates)
   >>> my_nod = dpf.()
   >>> op.inputs.nod.connect(my_nod)
   >>> my_used_node_index = dpf.()
   >>> op.inputs.used_node_index.connect(my_used_node_index)
   >>> my_eigenvalue = dpf.()
   >>> op.inputs.eigenvalue.connect(my_eigenvalue)
   >>> my_translational_mode_shape = dpf.()
   >>> op.inputs.translational_mode_shape.connect(my_translational_mode_shape)
   >>> my_rotational_mode_shape = dpf.()
   >>> op.inputs.rotational_mode_shape.connect(my_rotational_mode_shape)
   >>> my_invrt_1 = float()
   >>> op.inputs.invrt_1.connect(my_invrt_1)
   >>> my_invrt_2 = dpf.()
   >>> op.inputs.invrt_2.connect(my_invrt_2)
   >>> my_invrt_3 = dpf.()
   >>> op.inputs.invrt_3.connect(my_invrt_3)
   >>> my_invrt_4 = dpf.()
   >>> op.inputs.invrt_4.connect(my_invrt_4)
   >>> my_invrt_5 = dpf.()
   >>> op.inputs.invrt_5.connect(my_invrt_5)
   >>> my_invrt_6 = dpf.()
   >>> op.inputs.invrt_6.connect(my_invrt_6)
   >>> my_invrt_7 = dpf.()
   >>> op.inputs.invrt_7.connect(my_invrt_7)
   >>> my_invrt_8 = dpf.()
   >>> op.inputs.invrt_8.connect(my_invrt_8)
   >>> my_dfmffile_path = str()
   >>> op.inputs.dfmffile_path.connect(my_dfmffile_path)
   >>> my_rstfile_path = str()
   >>> op.inputs.rstfile_path.connect(my_rstfile_path)

   >>> # Instantiate operator and connect inputs in one line
   >>> op = dpf.operators.result.write_motion_dfmf_file(
   ...     model_data=my_model_data,
   ...     mode_shapes=my_mode_shapes,
   ...     lumped_mass=my_lumped_mass,
   ...     field_coordinates=my_field_coordinates,
   ...     nod=my_nod,
   ...     used_node_index=my_used_node_index,
   ...     eigenvalue=my_eigenvalue,
   ...     translational_mode_shape=my_translational_mode_shape,
   ...     rotational_mode_shape=my_rotational_mode_shape,
   ...     invrt_1=my_invrt_1,
   ...     invrt_2=my_invrt_2,
   ...     invrt_3=my_invrt_3,
   ...     invrt_4=my_invrt_4,
   ...     invrt_5=my_invrt_5,
   ...     invrt_6=my_invrt_6,
   ...     invrt_7=my_invrt_7,
   ...     invrt_8=my_invrt_8,
   ...     dfmffile_path=my_dfmffile_path,
   ...     rstfile_path=my_rstfile_path,
   ... )

   >>> # Get output data
   >>> result_dfmf_data_source = op.outputs.dfmf_data_source()












.. py:currentmodule:: write_motion_dfmf_file

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect an input on the operator using a pin number.
          * - :py:attr:`~connect_operator_as_input`
            - Connect an operator as an input on a pin.
          * - :py:attr:`~get_output`
            - Retrieve the output of the operator on the pin number.
          * - :py:attr:`~run`
            - Evaluate this operator.
          * - :py:attr:`~eval`
            - Evaluate this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~inputs`
            - Enables to connect inputs to the operator
          * - :py:attr:`~outputs`
            - Enables to get outputs of the operator by evaluating it
          * - :py:attr:`~progress_bar`
            - Enable or disable progress bar display when requesting the operator's output.
          * - :py:attr:`~config`
            - Copy of the operator's current configuration.
          * - :py:attr:`~id`
            - Retrieve the unique identifier of the operator.
          * - :py:attr:`~specification`
            - Returns the Specification (or documentation) of this Operator.
          * - :py:attr:`~changelog`
            - Return the changelog of this operator.
          * - :py:attr:`~version`
            - Return the current version of the operator.


   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - 


   .. tab-item:: Static methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~default_config`
            - Returns the default config of the operator.
          * - :py:attr:`~operator_specification`
            - Documents an Operator with its description (what the Operator does),its inputs and outputs and some properties.


   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__del__`
            - Delete this instance.
          * - :py:attr:`~__str__`
            - Describe the entity.
          * - :py:attr:`~__add__`
            - Add two fields or two fields containers.
          * - :py:attr:`~__sub__`
            - Subtract two fields or two fields containers.
          * - :py:attr:`~__pow__`
            - Raise each element of a field or a fields container to power 2.
          * - :py:attr:`~__mul__`
            - Multiply two fields or two fields containers.
          * - :py:attr:`~__truediv__`
            - Perform division with another operator or a scalar.




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.result.write_motion_dfmf_file import write_motion_dfmf_file

Property detail
---------------

.. py:property:: inputs
   :type: InputsWriteMotionDfmfFile


   Enables to connect inputs to the operator

   :returns: An instance of InputsWriteMotionDfmfFile.
   :rtype: inputs

.. py:property:: outputs
   :type: OutputsWriteMotionDfmfFile


   Enables to get outputs of the operator by evaluating it

   :returns: An instance of OutputsWriteMotionDfmfFile.
   :rtype: outputs

.. py:property:: progress_bar
   :type: bool


   Enable or disable progress bar display when requesting the operator's output.

   With this property, the user can choose to print a progress bar when
   the operator's output is requested, default is False

.. py:property:: config

   Copy of the operator's current configuration.

   You can modify the copy of the configuration and then use ``operator.config = new_config``
   or instantiate an operator with the new configuration as a parameter.

   For information on an operator's options, see the documentation for that operator.

   :returns: Copy of the operator's current configuration.
   :rtype: :class:`ansys.dpf.core.config.Config`

   .. rubric:: Examples

   Modify the copy of an operator's configuration and set it as current config
   of the operator.

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.math.add()
   >>> config_add = op.config
   >>> config_add.set_work_by_index_option(True)
   >>> op.config = config_add

.. py:property:: id
   :type: int


   Retrieve the unique identifier of the operator.

   This property returns the unique ID associated with the operator.
   This property is lazily initialized.

   :returns: The unique identifier of the operator.
   :rtype: int

   .. rubric:: Notes

   Property available with server's version starting at 10.0.

.. py:property:: specification

   Returns the Specification (or documentation) of this Operator.

   :rtype: Specification

.. py:property:: changelog
   :type: ansys.dpf.core.changelog.Changelog


   Return the changelog of this operator.

   Requires DPF 11.0 (2026 R1) or above.

   :returns: Changelog of the operator.
   :rtype: changelog

.. py:property:: version
   :type: packaging.version.Version


   Return the current version of the operator.

   Requires DPF 11.0 (2026 R1) or above.



Attribute detail
----------------

.. py:attribute:: name
   :value: None




Method detail
-------------

.. py:method:: default_config(server: ansys.dpf.core.server_types.AnyServerType = None) -> ansys.dpf.core.config.Config
   :staticmethod:


   Returns the default config of the operator.

   This config can then be changed to the user needs and be used to
   instantiate the operator. The Configuration allows to customize
   how the operation will be processed by the operator.

   :param server: Server with channel connected to the remote or local instance. When
                  ``None``, attempts to use the global server.

   :returns: A new Config instance equivalent to the default config for this operator.
   :rtype: config


.. py:method:: connect(pin, inpt, pin_out=0)

   Connect an input on the operator using a pin number.

   :param pin: Number of the input pin.
   :type pin: int
   :param inpt:
   :type inpt: str, int, double, bool, list[int], list[float], Field, FieldsContainer, Scoping,
   :param ScopingsContainer: Operator, os.PathLike Object to connect to.
   :param MeshedRegion: Operator, os.PathLike Object to connect to.
   :param MeshesContainer: Operator, os.PathLike Object to connect to.
   :param DataSources: Operator, os.PathLike Object to connect to.
   :param CyclicSupport: Operator, os.PathLike Object to connect to.
   :param dict: Operator, os.PathLike Object to connect to.
   :param Outputs: Operator, os.PathLike Object to connect to.
   :param pin_out: If the input is an operator, the output pin of the input operator. The default is ``0``.
   :type pin_out: int, optional

   .. rubric:: Examples

   Compute the minimum of displacement by chaining the ``"U"`` and ``"min_max_fc"`` operators.

   >>> from ansys.dpf import core as dpf
   >>> from ansys.dpf.core import examples
   >>> data_src = dpf.DataSources(examples.find_multishells_rst())
   >>> disp_op = dpf.operators.result.displacement()
   >>> disp_op.inputs.data_sources(data_src)
   >>> max_fc_op = dpf.operators.min_max.min_max_fc()
   >>> max_fc_op.inputs.connect(disp_op.outputs)
   >>> max_field = max_fc_op.outputs.field_max()
   >>> max_field.data
   DPFArray([[0.59428386, 0.00201751, 0.0006032 ]]...


.. py:method:: connect_operator_as_input(pin, op)

   Connect an operator as an input on a pin.

   :param pin: Number of the output pin. The default is ``0``.
   :type pin: int
   :param op: Requested type of the output. The default is ``None``.
   :type op: :class:`ansys.dpf.core.dpf_operator.Operator`


.. py:method:: get_output(pin=0, output_type=None)

   Retrieve the output of the operator on the pin number.

   To activate the progress bar for server version higher or equal to 3.0,
   use ``my_op.progress_bar=True``

   :param pin: Number of the output pin. The default is ``0``.
   :type pin: int, optional
   :param output_type: Requested type of the output. The default is ``None``.
   :type output_type: :class:`ansys.dpf.core.common.types`, type,  optional

   :returns: Output of the operator.
   :rtype: type


.. py:method:: __del__()

   Delete this instance.


.. py:method:: __str__()

   Describe the entity.

   :returns: Description of the entity.
   :rtype: str


.. py:method:: run()

   Evaluate this operator.


.. py:method:: eval(pin=None)

   Evaluate this operator.

   :param pin: Number of the output pin. The default is ``None``.
   :type pin: int

   :returns: **output** -- Returns the first output of the operator by default and the output of a
             given pin when specified. Or, it only evaluates the operator without output.
   :rtype: FieldsContainer, Field, MeshedRegion, Scoping

   .. rubric:: Examples

   Use the ``eval`` method.

   >>> from ansys.dpf import core as dpf
   >>> import ansys.dpf.core.operators.math as math
   >>> from ansys.dpf.core import examples
   >>> data_src = dpf.DataSources(examples.find_multishells_rst())
   >>> disp_op = dpf.operators.result.displacement()
   >>> disp_op.inputs.data_sources(data_src)
   >>> normfc = math.norm_fc(disp_op).eval()


.. py:method:: __add__(fields_b)

   Add two fields or two fields containers.

   :returns: **add**
   :rtype: operators.math.add_fc


.. py:method:: __sub__(fields_b)

   Subtract two fields or two fields containers.

   :returns: **minus**
   :rtype: operators.math.minus_fc


.. py:method:: __pow__(value)

   Raise each element of a field or a fields container to power 2.


.. py:method:: __mul__(value)

   Multiply two fields or two fields containers.

   :returns: **mul**
   :rtype: operators.math.generalized_inner_product_fc


.. py:method:: operator_specification(op_name, server=None)
   :staticmethod:


   Documents an Operator with its description (what the Operator does),its inputs and outputs and some properties.


.. py:method:: __truediv__(inpt)

   Perform division with another operator or a scalar.

   This method allows the use of the division operator (`/`) between an
   `Operator` instance and either another `Operator` or a scalar value (float).





